@@ -7,5 +7,6 @@
 
 void showUsage(char* name);
 char* dungeonFileName();
+void initTerminal();
 
 #endif //PROJECT_MAIN_H
