@@ -8,6 +8,7 @@
 #include "dungeon.h"
 
 void moveMonsterLogic(dungeon_t* dungeonPtr, monster_t* monsterPtr);
+void moveMonster(dungeon_t* dungeonPtr, monster_t* monsterPtr, int dstX, int dstY);
 //void movePC(dungeon_t* dungeonPtr);
 
 #endif //PROJECT_MOVEMENT_H
